--- a/package.json
+++ b/package.json
@@ -20,8 +20,15 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.3.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fullcalendar/angular": "^6.1.15",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@types/moment": "^2.13.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
     "maticon": "^1.0.7",
     "moment": "^2.30.1",
     "ngx-toastr": "^14.3.0",
@@ -33,6 +40,7 @@
     "@angular-devkit/build-angular": "^14.2.13",
     "@angular/cli": "~14.2.13",
     "@angular/compiler-cli": "^14.2.0",
+    "@types/chart.js": "^2.9.41",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
